charts/all/primary-network-policy/baseline/combined-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: combined
  # This policy should be created in the namespace where you want to
  # enforce these egress rules.
  namespace: coco-secured
spec:
  # Apply this policy to all pods in the namespace.
  podSelector: {}

  # This policy will only define rules for Egress (outbound) traffic.
  policyTypes:
    - Egress
  egress:
    - to:
        # - ipBlock:
        #     cidr: 0.0.0.0/0
        - ipBlock:
            cidr: 185.199.111.154/32
        - ipBlock:
            cidr: 185.199.109.154/32
        - ipBlock:
            cidr: 185.199.110.154/32

        - ipBlock:
            cidr: 140.82.121.33/32
        - ipBlock:
            cidr: 140.82.121.34/32
        - ipBlock:
            cidr: 140.82.113.33/32
        - ipBlock:
            cidr: 140.82.113.34/32
        - ipBlock:
            cidr: 140.82.112.33/32
        - ipBlock:
            cidr: 140.82.112.34/32
        - ipBlock:
            cidr: 140.82.114.33/32
        - ipBlock:
            cidr: 140.82.114.34/32
        - ipBlock:
            cidr: 192.30.255.164/31
        - ipBlock:
            cidr: 20.201.28.144/32
        - ipBlock:
            cidr: 20.205.243.164/32
        - ipBlock:
            cidr: 20.87.245.1/32
        - ipBlock:
            cidr: 4.237.22.32/32
        - ipBlock:
            cidr: 20.207.73.86/32
        - ipBlock:
            cidr: 20.27.177.117/32
        - ipBlock:
            cidr: 20.200.245.241/32
        - ipBlock:
            cidr: 20.175.192.150/32
        - ipBlock:
            cidr: 20.233.83.147/32
        - ipBlock:
            cidr: 20.29.134.18/32
        - ipBlock:
            cidr: 20.199.39.231/32
        - ipBlock:
            cidr: 20.217.135.1/32
        - ipBlock:
            cidr: 4.225.11.196/32
        - ipBlock:
            cidr: 4.208.26.196/32
        - ipBlock:
            cidr: 20.26.156.211/32
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
    - to:
        - namespaceSelector:
            matchLabels:
              # This selects the target namespace by its name. For this to work,
              # the namespace must be labeled. You can add the label with:
              # kubectl label namespace trustee-operator-system kubernetes.io/metadata.name=trustee-operator-system
              kubernetes.io/metadata.name: trustee-operator-system
          podSelector:
            matchLabels:
              app: kbs
    # - to:
    #     - ipBlock:
    #         cidr: 127.0.0.1/32
