charts/all/primary-network-policy/baseline/egress-registry-access.yaml
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default # fixed
spec:
  egress:
    - type: Allow
      to:
        dnsName: registry.access.redhat.com
    - type: Allow
      to:
        dnsName: google.com
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
