charts/all/primary-network-policy/baseline/egress-to-kbs.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-trustee
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              # This selects the target namespace by its name. For this to work,
              # the namespace must be labeled. You can add the label with:
              # kubectl label namespace trustee-operator-system kubernetes.io/metadata.name=trustee-operator-system
              kubernetes.io/metadata.name: trustee-operator-system
          podSelector:
            matchLabels:
              app: kbs
